create trivia cards with buttons displaying answers
Co-authored-by: Bess Campbell <bess.k.campbell@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,21 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card" id="question1">
+          <div class="card-body">
+            <h5 class="card-title"></h5>
+            <p class="card-text"></p>
+            <button class="button btn-primary" id="answer1"></button>
+            <button class="button btn-warning" id="answer2"></button>
+            <button class="button btn-success" id="answer3"></button>
+            <button class="button btn-danger" id="answer4"></button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
